--- a/public/privacy/jabtracker/index.html
+++ b/public/privacy/jabtracker/index.html
@@ -3,36 +3,36 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HarborByte</title>
-  <meta name="description" content="HarborByte builds simple, helpful apps." />
+  <title>Privacy Policy — JabTracker</title>
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;max-width:860px;margin:0 auto;padding:48px 20px;line-height:1.6}
-    header{margin-bottom:28px}
-    .card{border:1px solid #e5e7eb;border-radius:14px;padding:18px 18px;margin:14px 0}
-    a{color:inherit}
+    h1,h2{margin-top:28px}
     small{color:#6b7280}
+    code{background:#f3f4f6;padding:2px 6px;border-radius:6px}
   </style>
 </head>
 <body>
-  <header>
-    <h1>HarborByte</h1>
-    <p>We build simple, privacy-respecting apps.</p>
-    <small>Support: <a href="mailto:support@YOURDOMAIN.com">support@YOURDOMAIN.com</a></small>
-  </header>
+  <h1>Privacy Policy — JabTracker</h1>
+  <small>Last updated: 2026-01-06</small>
 
-  <section class="card">
-    <h2>Apps</h2>
-    <ul>
-      <li><a href="/apps/jabtracker/">JabTracker</a></li>
-    </ul>
-  </section>
+  <h2>Overview</h2>
+  <p>JabTracker is designed to help you track personal health-related information such as weigh-ins and injection dates.</p>
 
-  <section class="card">
-    <h2>Policies</h2>
-    <ul>
-      <li><a href="/privacy/jabtracker/">Privacy Policy (JabTracker)</a></li>
-      <li><a href="/terms/jabtracker/">Terms of Use (JabTracker)</a></li>
-    </ul>
-  </section>
+  <h2>Data We Collect</h2>
+  <p>By default, JabTracker stores the information you enter (for example, weigh-ins and injection dates) on your device.</p>
+
+  <h2>Data Sharing</h2>
+  <p>We do not sell your personal data. We do not share your personal data with third parties for advertising.</p>
+
+  <h2>Analytics</h2>
+  <p>At this time, JabTracker does not use third-party analytics that identify you personally.</p>
+
+  <h2>Security</h2>
+  <p>We take reasonable steps to protect your information. However, no method of storage is 100% secure.</p>
+
+  <h2>Contact</h2>
+  <p>If you have questions, contact: <a href="mailto:support@YOURDOMAIN.com">support@YOURDOMAIN.com</a></p>
+
+  <p><a href="/apps/jabtracker/">← Back to JabTracker</a></p>
 </body>
 </html>
